# phoneme_contrast

./: .gitignore  README.md  main.py  pyproject.toml  statistical_significance_results.json
configs/: config.yaml  critical_reviewer.yaml
configs/data/: default.yaml
configs/model/: baseline_linear.yaml  cnn_deep.yaml  cnn_small.yaml  conformer_small.yaml  tcn.yaml
configs/system/: auto.yaml
publication/: README.md  manuscript.md
publication/analysis/: analysis_results.json  phonetic_feature_report.md  publication_report.md
publication/figures/: figure_01_main_comparison.md  figure_02_statistical_analysis.md
publication/manuscript/: abstract.md  discussion.md  full_manuscript.md  methods.md  results.md
publication/sections/: 00_introduction_outline.md  01_abstract.md  02_methods.md  02_methods_review.md  03_results.md  03_results_review.md  04_discussion.md  04_discussion_review.md  05_conclusion_outline.md
publication/supplementary/: supplementary_methods.md
publication/tables/: table_01_main_results.md  table_02_statistical_significance.md  (+2 more)
scripts/: analyze_confusions.py  analyze_multirun_complete.py  analyze_statistical_significance.py  critical_reviewer_agent.py  debug_shapes.py  evaluate.py  explore_data.py  final_results_summary.py  fix_stratification.py  publication_analysis.py  quick_ablation.py  reviewer_checklist.py  run_publication_analysis.py  statistical_significance.py  test_cnn_deep.py  train.py
tests/: test_dataset.py  test_features.py  test_losses.py  test_models.py  test_parser.py  test_trainer.py  test_transforms.py
(+608 files in other folders)
